testdata/reducer-corpus/javascript/runtime/type-error/stdout.txt
==================== Test output for //cases:runtime_failure:
<RUNTIME_ROOT>/bazel/feb5f1499fa827d25b9c36ce25bc0fad/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/runtime_failure_/runtime_failure.runfiles/_main/cases/runtime_failure.js:2
  return invoice.lines.reduce((total, line) => total + line.amount, 0);
                 ^

TypeError: Cannot read properties of undefined (reading 'lines')
    at invoiceTotal (<RUNTIME_ROOT>/bazel/feb5f1499fa827d25b9c36ce25bc0fad/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/runtime_failure_/runtime_failure.runfiles/_main/cases/runtime_failure.js:2:18)
    at Object.<anonymous> (<RUNTIME_ROOT>/bazel/feb5f1499fa827d25b9c36ce25bc0fad/sandbox/darwin-sandbox/2/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/cases/runtime_failure_/runtime_failure.runfiles/_main/cases/runtime_failure.js:5:1)
    at Module._compile (node:internal/modules/cjs/loader:1761:14)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.12.0
================================================================================

Executed 1 out of 1 test: 1 fails locally.
